fix for Facebook box overflow

--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -7,7 +7,7 @@ Footer
   margin: 0;
   padding: 2em 0;
   color: white;
-  overflow: hidden;
+  overflow: visible;
   @include clearfix;
 }
 #footer a {
